--- a/package.json
+++ b/package.json
@@ -31,5 +31,12 @@
   },
   "devDependencies": {
     "ts-node": "^9.0.0"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
