--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.0.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.4",
     "ts-node": "^9.0.0"
   },
   "mikro-orm": {
