--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "@mikro-orm/core": "^4.0.0-alpha.0",
     "@mikro-orm/migrations": "^4.0.0-alpha.0",
     "@mikro-orm/postgresql": "^4.0.0-alpha.0",
+    "apollo-server-express": "^2.17.0",
+    "express": "^4.17.1",
+    "graphql": "^15.3.0",
     "pg": "^8.3.2",
+    "type-graphql": "^1.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0"
   },
