--- a/package.json
+++ b/package.json
@@ -22,20 +22,25 @@
   },
   "homepage": "https://github.com/rezaamashi/rabbit-clone#readme",
   "dependencies": {
-    "@mikro-orm/cli": "^4.0.0-alpha.0",
-    "@mikro-orm/core": "^4.0.0-alpha.0",
-    "@mikro-orm/migrations": "^4.0.0-alpha.0",
-    "@mikro-orm/postgresql": "^4.0.0-alpha.0",
+    "@mikro-orm/cli": "^4.3.3",
+    "@mikro-orm/core": "^4.3.3",
+    "@mikro-orm/migrations": "^4.3.3",
+    "@mikro-orm/postgresql": "^4.3.3",
+    "@yarnpkg/pnpify": "^2.2.1",
     "apollo-server-express": "^2.17.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
-    "pg": "^8.3.2",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.10.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0"
   },
