--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts"
+    "dev2": "nodemon --exec ts-node src/index.ts",
+    "create:migration": "mikro-orm migration:create"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,12 @@
     "@mikro-orm/postgresql": "^4.3.3",
     "@yarnpkg/pnpify": "^2.2.1",
     "apollo-server-express": "^2.17.0",
+    "argon2": "^0.27.1",
+    "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "graphql-subscriptions": "^1.2.1",
+    "graphql-upload": "^11.0.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0",
