--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "argon2": "^0.27.1",
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
-    "graphql": "^15.3.0",
+    "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.1",
     "graphql-upload": "^11.0.0",
     "pg": "^8.5.1",
+    "prettier": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0",
     "typescript": "^4.0.2"
