--- a/package.json
+++ b/package.json
@@ -31,18 +31,24 @@
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.1",
     "class-validator": "^0.13.1",
+    "connect-redis": "^5.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.1",
     "graphql-upload": "^11.0.0",
     "pg": "^8.5.1",
     "prettier": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.16",
     "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.3",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.10.0",
