--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "argon2": "^0.27.1",
     "class-validator": "^0.13.1",
     "connect-redis": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/connect-redis": "^0.0.16",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.3",
     "@types/redis": "^2.8.28",
