--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
+    "dev-back": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts",
+    "dev2": "nodemon --exec ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -58,5 +59,5 @@
     "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0"
-  },
+  }
 }
