--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "with-chakra-ui",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
+    "dev-front": "next dev",
     "build": "next build",
     "start": "next start",
     "gen": "graphql-codegen --config codegen.yml"
@@ -13,12 +13,13 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@urql/exchange-graphcache": "^4.2.1",
+    "browserslist": "^4.17.1",
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "graphql": "^15.5.1",
     "next": "latest",
     "next-urql": "^3.1.1",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^17.0.2",
@@ -31,6 +32,13 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-urql": "^2.0.5",
     "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "typescript": "^4.2.3"
   }
 }
